Gifs fixed, also shift in centerQuote wrapper added

--- a/css/main.css
+++ b/css/main.css
@@ -205,6 +205,9 @@ html, body{
                 top: 0; bottom: 0; left: 0; right: 0;
                 /*border: 1px solid aqua;*/
             }
+                .extendedCenterQuote{
+                    height: 3.8em !important;
+                }
                 #centerQuotes .quotes, #centerQuotes .specialQuote{
                     display: block;
                     margin: 0;
